<resources>
    <string name="app_name">Sofra</string>
    <string name="GPSAlertDialogMessage">settings alert</string>
    <string name="action_settings">ok</string>
    <string name="cancel">cancel</string>
    <string name="GPSAlertDialogTitle">settings alert</string>
    <string name="order_food">Order Food</string>
    <string name="buy_food">Buy Food</string>
    <string name="title_activity_main">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="change_password">Change password</string>.
    <string name="remember_me">Remember Me</string>
    <string name="do_not_have_an_account">Do not have an account? </string>
    <string name="click"> Click</string>
    <string name="here">here</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="name_restaurant">Name Restaurant</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continues">Continue</string>
    <string name="send_Code">Send</string>
    <string name="is_not_null">Is Not null</string>
    <string name="sitting">sitting</string>

    <string name="forget_password_">Forgot your password</string>
    <string name="pin_code">Pin Code</string>

    <string name="confirmation_code_wrong">The confirmation code is wrong</string>
    <string name="number_does_not_correspond">This number does not correspond</string>
    <string name="It_should_be_the_largest6">It should be the largest 6</string>
    <string name="confirmation_number_error">The confirmation number is an error</string>
    <string name="city">City</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="connection_data">Connection Data</string>
    <string name="phone_whats_app">Phone WhatsApp</string>
    <string name="items">items</string>
    <string name="details_items">Details Items</string>
    <string name="price">price</string>
    <string name="_0_0">0.0</string>
    <string name="product_name">Product Name</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="update">Update</string>
    <string name="offer_price">Offer Price</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="request">Request</string>
    <string name="user">User</string>
    <string name="new_request">طلبات جديده</string>
    <string name="current_requests">طلبات حاليه</string>
    <string name="previous_requests">طلبات سابقه</string>
    <string name="call">Call</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="number_client">number Client</string>
    <string name="total">total</string>
    <string name="address">address</string>
    <string name="request_is_complete">complete</string>
    <string name="request_is_rejected">rejected</string>
    <string name="confirm_delivery">Confirm</string>
    <string name="order_details">Order details</string>
    <string name="paying">paying</string>
    <string name="commission">Commission</string>
    <string name="details_commission">برجاء تحويل 10% من الربح المباع في مدة افضالها شهر  علما بان جميه الطلبات ستكون مسجله علي حسابك الشخصي</string>
    <string name="name_sofra">باسم سفره</string>
    <string name="_2554551547">الرجحي : 2554551547</string>
    <string name="_87878484874">الاهلي :87878484874</string>
    <string name="more">More</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="to">to</string>
    <string name="from">From</string>
    <string name="offer_name">Offer Name</string>
    <string name="details">Details</string>
    <string name="add_a_picture_of_the_offers">Add a picture of the offers</string>
    <string name="state">State</string>
    <string name="regions">Regions</string>
    <string name="menu">Menu</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="comments_and_ratings">We are happy to share your comments and ratings</string>
    <string name="information">Information</string>
    <string name="choose_the_rate">Choose the  Rate</string>
    <string name="add_comment_here">Add Comment Here</string>
    <string name="private_order">Private Order</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="total_all">Total All</string>
    <string name="confirm">Confirm</string>
    <string name="get_offers">Get Offers</string>
    <string name="note">Add Note</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="pay">Pay</string>
    <string name="pay_online">Pay Online</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="total_amount">Total amount</string>
    <string name="contact_me">Contact me</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="enquiry">Enquiry</string>
    <string name="massage">massage</string>
    <string name="notify">notifications</string>
    <string name="text_">هناك حقيقه مثبته من زمن طوبل وهي ان \nالمحتوي المقروء لصفحه سيلهي القارء عن التركيز علي الشكل الخارجي للنص او شكل توضع استخدم طريقة لوزيم ايبسوم لانها تعطي توزيعا طبيعيا - الي حد ما للاحرف عوضا عن استخدام - هنا يوجد محتوي نصي</string>
    <string name="cach">Cash</string>
    <string name="on_line">OnLine</string>
    <string name="are_you_sure_about_going_out">Are you sure about going out?</string>
    <string name="who_are_we">who are we?</string>
</resources>
