<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_28"
    tools:ignore="ContentDescription,UnusedAttribute,Autofill,TextFields,UselessParent">
     <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dim_72"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_l6"
                android:text="@string/contact_me"
                android:textColor="@color/dark_blue100" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dim_l6">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/contactMeRestaurantFragmentEditName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/name"
                        android:padding="@dimen/dim_8"
                        android:textSize="@dimen/txt_size_16"
                        android:inputType="textPersonName"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8"

                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dim_l6">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="parent">


                    <EditText
                        android:id="@+id/contactMeRestaurantFragmentEditEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/email"
                        android:padding="@dimen/dim_8"
                        android:textSize="@dimen/txt_size_16"
                        android:inputType="textEmailAddress"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dim_l6">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="parent">


                    <EditText
                        android:id="@+id/contactMeRestaurantFragmentEditPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/phone"
                        android:padding="@dimen/dim_8"
                        android:textSize="@dimen/txt_size_16"
                        android:inputType="phone"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_l6"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dim_l6">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="parent">


                    <EditText
                        android:id="@+id/contactMeRestaurantFragmentEditMassage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_104"
                        android:background="@null"
                        android:hint="@string/massage"
                        android:padding="@dimen/dim_8"
                        android:textSize="@dimen/txt_size_16"
                        android:inputType="text"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/contactMeRestaurantFragmentRGContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/contactMeRestaurantFragmentRbComplaint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/complaint" />

                    <RadioButton
                        android:id="@+id/contactMeRestaurantFragmentRbSuggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suggestion"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/contactMeRestaurantFragmentRbEnquiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enquiry" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/contactMeRestaurantFragmentBtnSend"
                android:layout_width="@dimen/dim_202"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_l6"
                android:background="@drawable/shape_btn"
                android:text="@string/add"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/contactMeRestaurantFragmentItemProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="@+id/scrollView3" />


</android.support.constraint.ConstraintLayout>