<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/pink"
    android:padding="@dimen/txt_size_32"
    tools:ignore="UnusedAttribute,RtlSymmetry,ContentDescription">


    <ImageView
        android:id="@+id/forgetPasswordActivityImgIcon"
        android:layout_width="@dimen/dim_120"
        android:layout_height="@dimen/dim_120"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/forgetPasswordActivityEditUserEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_size_44"
        android:layout_marginTop="@dimen/dim_24"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="@dimen/dim_4"
        android:drawableTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingStart="@dimen/dim_4"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/forgetPasswordActivityBtnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_btn"
        android:text="@string/send_Code"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordActivityEditUserEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_password_"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordActivityImgIcon" />

</android.support.constraint.ConstraintLayout>