<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dim_56"
    android:orientation="vertical">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/cartItemRestaurantClientFragmentRvShowItemCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dim_154"
        tools:listitem="@layout/set_adapter_cart_item_restaurant_client"/>


    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/containerBtn"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/containerBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_8"
            android:text="@string/total_all"
            android:textColor="@color/dark"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView


            android:layout_width="@dimen/dim_64"
            android:layout_height="@dimen/dim_64"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dim_28"
            app:cardElevation="@dimen/dim_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cartItemRestaurantClientFragmentTvTotalCart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_1" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/cartItemRestaurantClientFragmentBtnMoreCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_l2"
            android:layout_marginEnd="@dimen/dim_l2"
            android:layout_weight="1"
            android:background="@drawable/shape_btn"
            android:text="@string/more"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cartItemRestaurantClientFragmentBtnConfirmCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_l2"
            android:layout_marginEnd="@dimen/dim_l2"
            android:layout_weight="1"
            android:background="@drawable/shape_btn"
            android:text="@string/confirm"
            android:textColor="@color/white" />


    </LinearLayout>

</RelativeLayout>